--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
+	"files.autoSave": "onFocusChange",
+	"git.confirmSync": false,
+	"git.enableSmartCommit": true,
+	"git.autofetch": true,
+	"editor.tabSize": 2,
+	"editor.wordWrap": "on",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	},
 	"eslint.validate": [
 		"javascript",
 		"javascriptreact",
@@ -6,5 +15,9 @@
 		"typescript",
 		"typescriptreact",
 		"svelte"
-	]
+	],
+	"[svelte]": {
+		"editor.defaultFormatter": "svelte.svelte-vscode"
+	},
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
