--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.2",
 		"vite": "^4.5.0",
+		"vite-plugin-mkcert": "^1.17.1",
 		"vitest": "^0.34.6"
 	},
 	"type": "module",
