--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.27.6",
-		"@types/libarchive.js": "^1.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"eslint": "^8.54.0",
@@ -34,7 +33,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"extract-zip-rar": "^0.1.0",
-		"libarchive.js": "^1.3.0"
+		"extract-zip-rar": "^0.1.0"
 	}
 }
