--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,15 +1,35 @@
 {
-  "name": "Web Comic Reader",
-  "short_name": "Comics",
-  "description": "ead comics stored as .cbr, .cbz, .zip, or .rar files.",
-  "start_url": "/books",
-  "display": "standalone",
-  "file_handlers": [{"action": "/", "accept": {
-    "application/zip": [".zip", ".cbz"],
-    "application/x-zip-compressed": [".zip", ".cbz"],
-    "multipart/x-zip": [".zip", ".cbz"],
-    "application/vnd.rar": [".rar", ".cbr"],
-    "application/x-rar-compressed": [".rar", ".cbr"],
-    "application/octet-stream": [".zip", ".cbz", ".rar", ".cbr"]
-  }}]
+	"name": "Web Comic Reader",
+	"short_name": "Comics",
+	"description": "ead comics stored as .cbr, .cbz, .zip, or .rar files.",
+	"start_url": "/books",
+	"display": "standalone",
+	"theme_color": "#fff15c",
+	"icons": [
+		{
+			"src": "/reader-512x512",
+			"sizes": "512x512",
+			"type": "image/png",
+			"purpose": "maskable"
+		},
+		{
+			"src": "/reader-512x512",
+			"sizes": "512x512",
+			"type": "image/png",
+			"purpose": "maskable"
+		}
+	],
+	"file_handlers": [
+		{
+			"action": "/",
+			"accept": {
+				"application/zip": [".zip", ".cbz"],
+				"application/x-zip-compressed": [".zip", ".cbz"],
+				"multipart/x-zip": [".zip", ".cbz"],
+				"application/vnd.rar": [".rar", ".cbr"],
+				"application/x-rar-compressed": [".rar", ".cbr"],
+				"application/octet-stream": [".zip", ".cbz", ".rar", ".cbr"]
+			}
+		}
+	]
 }
