--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "latest",
 	"version": "0.0.1",
 	"private": true,
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "vite build && npm run lint && npm run check",
