--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
 	"description": "ead comics stored as .cbr, .cbz, .zip, or .rar files.",
 	"start_url": "/books",
 	"display": "standalone",
-	"theme_color": "#FFEC00",
+	"theme_color": "#007ba7",
 	"icons": [
 		{
 			"src": "/reader-1024x1024.png",
