--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Web Comic Reader",
+	"name": "Comic Reader",
 	"short_name": "Comics",
 	"description": "ead comics stored as .cbr, .cbz, .zip, or .rar files.",
 	"start_url": "/books",
