--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"postinstall": "cp -a ./node_modules/extract-zip-rar/dist/. ./static"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.1.0",
@@ -35,6 +36,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"extract-zip-rar": "^0.5.3"
+		"extract-zip-rar": "^0.5.4"
 	}
 }
